<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.techbholi.bmicalculator.MainActivity"
    android:background="@drawable/bg">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/BMICalc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="84dp"
                android:text="@string/bmi_calculator"
                android:textColor="#1BDDFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="200dp"
                android:text="@string/enter_your_weight_kg"
                android:textColor="#03FFCC"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/weight_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="185dp"
                android:layout_toEndOf="@+id/weight"
                android:layout_marginStart="5dp"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:textColor="#47FF02"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="250dp"
                android:text="@string/enter_your_height_m"
                android:textColor="#03FFCC"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/height_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="235dp"
                android:layout_toEndOf="@+id/height"
                android:layout_marginStart="6dp"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:textColor="#FF008C"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="350dp"
                android:backgroundTint="#242AA8"
                android:text="@string/calculate_my_bmi" />

            <RelativeLayout
                android:id="@+id/relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/your_bmi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="450dp"
                    android:text="@string/your_bmi"
                    android:textColor="#75FF83"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/bmi_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="450dp"
                    android:layout_toEndOf="@id/your_bmi"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:id="@+id/BMI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relative"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textSize="20sp" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
